feat(fhir): Start moving requests to alternative R5 domain model